# invenio-drafts-resources

./: .git-blame-ignore-revs  .gitignore  AUTHORS.rst  CHANGES.rst  MANIFEST.in  README.rst  babel.ini  pyproject.toml  requirements-devel.txt  run-tests.sh  setup.cfg  setup.py
.github/workflows/: i18n-push.yml  pypi-publish.yml
docs/: api.rst  conf.py  configuration.rst  index.rst  usage.rst
invenio_drafts_resources/: __init__.py
invenio_drafts_resources/auditlog/: __init__.py  actions.py  context.py
invenio_drafts_resources/records/: __init__.py  api.py  models.py
invenio_drafts_resources/records/systemfields/: __init__.py  parent.py  versions.py
invenio_drafts_resources/resources/: __init__.py
invenio_drafts_resources/resources/records/: __init__.py  args.py  config.py  errors.py  resource.py
invenio_drafts_resources/services/: __init__.py
invenio_drafts_resources/services/records/: __init__.py  config.py  permissions.py  schema.py  search_params.py  service.py  tasks.py  uow.py
invenio_drafts_resources/services/records/components/: __init__.py  base.py  files.py  media_files.py  metadata.py  pid.py  relations.py
tests/: conftest.py  test_alembic.py
tests/mock_module/: __init__.py  api.py  models.py  permissions.py  resource.py  schemas.py  service.py
tests/mock_module/jsonschemas/: __init__.py
tests/records/: conftest.py  test_api.py
tests/resources/: conftest.py  test_files_resource.py  test_record_resource.py  test_resource_links.py
tests/services/: __init__.py  conftest.py  test_record_service.py  test_record_service_files.py  test_record_service_search.py  test_record_service_tasks.py  test_records_uow.py  test_services.py  utils.py
