# SPDX-FileCopyrightText: 2020-2024 CERN.
# SPDX-FileCopyrightText: 2020 Northwestern University.
# SPDX-FileCopyrightText: 2021-2026 TU Wien.
# SPDX-FileCopyrightText: 2022-2026 Graz University of Technology.
# SPDX-License-Identifier: MIT

[project]
name = "invenio-drafts-resources"
description = "Invenio Drafts Resources module to create REST APIs"
readme = "README.rst"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "CERN", email = "info@inveniosoftware.org" },
]
keywords = [
  "deposit",
  "drafts",
  "invenio",
  "records",
  "submit",
  "versioning",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
]
dependencies = [
  "invenio-audit-logs>=4.0.0,<5.0.0",
  "invenio-i18n>=4.0.0,<5.0.0",
  "invenio-records-resources>=11.0.0,<12.0.0",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/inveniosoftware/Invenio-Drafts-Resources"

[project.entry-points."invenio_audit_logs.actions"]
"draft.create" = "invenio_drafts_resources.auditlog.actions:DraftCreateAuditLog"
"draft.delete" = "invenio_drafts_resources.auditlog.actions:DraftDeleteAuditLog"
"draft.edit" = "invenio_drafts_resources.auditlog.actions:DraftEditAuditLog"
"draft.new_version" = "invenio_drafts_resources.auditlog.actions:DraftNewVersionAuditLog"
"record.publish" = "invenio_drafts_resources.auditlog.actions:RecordPublishAuditLog"

[project.entry-points."invenio_celery.tasks"]
invenio_drafts_resources = "invenio_drafts_resources.services.records.tasks"

[project.entry-points."invenio_db.models"]
invenio_drafts_resources = "invenio_drafts_resources.records.models"

[project.entry-points."invenio_i18n.translations"]
messages = "invenio_drafts_resources"

[project.optional-dependencies]
elasticsearch7 = [
  "invenio-search[elasticsearch7]>=3.0.0,<4.0.0",
]
opensearch1 = [
  "invenio-search[opensearch1]>=3.0.0,<4.0.0",
]
opensearch2 = [
  "invenio-search[opensearch2]>=3.0.0,<4.0.0",
]
tests = [
  "invenio-app>=3.0.0,<4.0.0",
  "invenio-db[mysql,postgresql]>=2.2.0,<3.0.0",
  "invenio-users-resources>=13.0.0,<14.0.0",
  "pytest-black>=0.6.0",
  "pytest-invenio>=4.0.0,<5.0.0",
  "sphinx>=4.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# see https://babel.pocoo.org/en/latest/messages.html#toml-configuration-format
[tool.babel]
[tool.babel.compile_catalog]
directory = "invenio_drafts_resources/translations/"
use_fuzzy = true

[tool.babel.extract_messages]
copyright_holder = "CERN"
msgid_bugs_address = "info@inveniosoftware.org"
mapping_file = "pyproject.toml"
output_file = "invenio_drafts_resources/translations/messages.pot"
add_comments = "NOTE"

[tool.babel.init_catalog]
input_file = "invenio_drafts_resources/translations/messages.pot"
output_dir = "invenio_drafts_resources/translations/"

[[tool.babel.mappings]]
method = "javascript"
pattern = "**.js"
encoding = "utf-8"
extract_messages = "$._, jQuery._"

[[tool.babel.mappings]]
method = "python"
pattern = "**.py"
encoding = "utf-8"

[[tool.babel.mappings]]
method = "jinja2"
pattern = "**/templates/**.html"
encoding = "utf-8"

[tool.hatch.version]
path = "invenio_drafts_resources/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
  "/invenio_drafts_resources",
]

[tool.isort]
profile = "black"

[tool.pydocstyle]
add_ignore = "D401"

[tool.pytest.ini_options]
addopts = '--black --isort --pydocstyle --doctest-glob="*.rst" --doctest-modules --cov=invenio_drafts_resources --cov-report=term-missing'
testpaths = "tests invenio_drafts_resources"
live_server_scope = "module"

# UV needs to be told explicitly which extras are conflicting:
# https://docs.astral.sh/uv/concepts/projects/config/#conflicting-dependencies
[tool.uv]
conflicts = [
  [
    { extra = "opensearch1" },
    { extra = "opensearch2" },
    { extra = "elasticsearch7" },
  ]
]
